# pileup-events

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  README.md
include/: bind.hpp  bounds.hpp  const.hpp  count.hpp  pileup.hpp  structs.hpp
src/: const.hpp  main.cpp  pileup.hpp  structs.hpp
swig/: pileup_events.i
tests/: test.cpp
